# starfish-ql

./: .gitignore  1.bundle.js  2.bundle.js  CNAME  README.md  main.bundle.js  sitemap.txt  sitemap.xml  tree.html
.github/ISSUE_TEMPLATE/: config.yml  feature-request.md
.github/workflows/: deploy.yml  main.yml
docs/: StarfishQL Schema.mwb  all_top_crates.csv  conn_comparison.ipynb  investigation.md  node_crate.csv  unique_top_crates.csv
docs/.ipynb_checkpoints/: conn_comparison-checkpoint.ipynb
freeport/backend/: .gitignore  index.js  package-lock.json  package.json  undefinedcrate_names.json
freeport/backend/src/api_access/: batch.js  calculate_connectivity.js  filter_edges.js  insert.js  main.js  reset_schema.js  test.js  url.js  util.js
freeport/backend/src/scrap/: file_reader.js  initial.js  main.js  meta.js  test.js  update.js  util.js
freeport/backend/src/scrape/: file_io.js  initial.js  main.js  update.js  util.js
freeport/frontend/: .gitignore  graph.html  index.html  index.js  package-lock.json  package.json  style.css  tree.html  webpack.common.js  webpack.config.js  webpack.dev.js
freeport/frontend/src/: add_text_to_node.js  drag.js  fit_text.js  index.js  render_graph.js  render_tree.js  zoom.js
freeport/frontend/src/api_access/: get_graph.js  get_tree.js  github_test.js  url.js  util.js
freeport/frontend/src/data/: mock.js  mock_graph.json  mock_tree.json  normalize.js
freeport/frontend/src/data/mock_graph/: simple.json
freeport/frontend/src/gui/: add_text_to_node.js  color.js  create_nodes.js  drag.js  fit_text.js  highlight.js  infobox.js  input.js  render_graph.js  render_tree.js  util.js  weight_decay_mode.js
freeport/frontend/src/main/: graph.js  tree.js
freeport/mappings_finder/: Cargo.toml  crate_names.json
freeport/mappings_finder/src/: main.rs
starfish/: Cargo.toml  README.md  Rocket.toml  lib.rs  main.rs  test.sh
starfish/api/: mod.rs
starfish/api/db/: mod.rs  pool.rs  schema.rs
starfish/api/handler/: core.rs  mod.rs  mutate.rs  query.rs  schema.rs  util.rs
starfish/core/: mod.rs
starfish/core/entities/: entity.rs  entity_attribute.rs  mod.rs  relation.rs
starfish/core/lang/: mod.rs
starfish/migration/: Cargo.toml
starfish/migration/src/: lib.rs  m20220121_000001_create_entity_table.rs  m20220121_000002_create_relation_table.rs  m20220121_000003_create_entity_attribute_table.rs  main.rs
starfish/mutate/: edge.rs  mod.rs  node.rs
starfish/query/: executor.rs  mod.rs  worker.rs
starfish/schema/: entity.rs  mod.rs  relation.rs
starfish/sqlite/: .gitignore
starfish/src/: lib.rs  main.rs
starfish/starfish-api/: Cargo.toml  README.md
starfish/starfish-api/src/: lib.rs
starfish/starfish-api/src/db/: pool.rs
starfish/starfish-api/src/handler/: core.rs  mod.rs  mutate.rs  query.rs  schema.rs  util.rs
starfish/starfish-core/: Cargo.toml  README.md
starfish/starfish-core/src/: lib.rs
starfish/starfish-core/src/entities/: entity_attribute.rs  mod.rs  relation.rs
starfish/starfish-core/src/lang/: iden.rs  mod.rs  mutate.rs  query.rs  schema.rs
starfish/starfish-core/src/migrator/: m20220121_000001_create_entity_table.rs  m20220121_000002_create_relation_table.rs  m20220121_000003_create_entity_attribute_table.rs  mod.rs
starfish/starfish-core/src/mutate/: edge.rs  mod.rs  node.rs
starfish/starfish-core/src/query/: executor.rs  mod.rs  worker.rs
starfish/starfish-core/src/schema/: entity.rs  mod.rs  relation.rs
starfish/tests/: core.rs  mod.rs
starfish/tests/common/: mod.rs  schema.rs  setup.rs
