[workspace]
members = [
    "starfish-core",
    "starfish-api",
]

[package]
name = "starfish-ql"
version = "0.1.0"
authors = [
    "Chris Tsang <tyt2y7@gmail.com>",
    "Sanford Pun <punsanford@gmail.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
]
edition = "2021"
description = "StarfishQL - A graph database and query engine"
license = "AGPL-3.0"
documentation = "https://docs.rs/starfish-ql"
repository = "https://github.com/SeaQL/starfish-ql"
categories = ["database"]
keywords = ["graph-database", "graph-query-engine", "mysql", "postgres", "sqlite"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "starfish"
path = "src/lib.rs"

[[bin]]
name = "starfish"
path = "src/main.rs"

[dependencies]
starfish-core = { version = "^0.1.0", path = "starfish-core" }
starfish-api = { version = "^0.1.0", path = "starfish-api" }

[dev-dependencies]
smol = { version = "^1.2" }
smol-potat = { version = "^1.1" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
