[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-schema = { version = "^0.7.0", git = "https://github.com/SeaQL/sea-schema", branch = "on-conflict-1", default-features = false, features = [ "migration", "debug-print" ] }
starfish-core = { path = "../starfish-core" }
