[package]
name = "starfish-api"
version = "0.1.0"
authors = [
    "Chris Tsang <tyt2y7@gmail.com>",
    "Sanford Pun <punsanford@gmail.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
]
edition = "2021"
description = "StarfishQL - A graph database and query engine"
license = "AGPL-3.0"
documentation = "https://docs.rs/starfish-ql"
repository = "https://github.com/SeaQL/starfish-ql"
categories = ["database"]
keywords = ["async", "graph", "graph-database", "graph-query-engine", "mysql", "postgres", "sqlite"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "starfish_api"
path = "src/lib.rs"

[dependencies]
starfish-core = { path = "../starfish-core" }
migration = { path = "../migration" }
sea-orm-rocket = { version = "^0.5.0" }
rocket = { version = "^0.5.0-rc.1", features = ["json"] }
async-trait = { version = "^0.1" }
figment = { version = "^0.10" }
serde_json = { version = "^1" }

[dev-dependencies]
pretty_assertions = { version = "^0.7" }
