[package]
name = "starfish-core"
version = "0.1.0"
authors = [
    "Chris Tsang <tyt2y7@gmail.com>",
    "Sanford Pun <punsanford@gmail.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
]
edition = "2021"
description = "A graph database and query engine"
license = "AGPL-3.0"
documentation = "https://docs.rs/starfish"
repository = "https://github.com/SeaQL/starfish-ql"
categories = ["database"]
keywords = ["async", "graph", "graph-database", "graph-query-engine", "mysql", "postgres", "sqlite"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "starfish_core"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0.6.0", default-features = false, features = [
    "macros",
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "debug-print",
]}
sea-schema = { git = "https://github.com/SeaQL/sea-schema.git", branch = "schema-manager", default-features = false, features = [ "migration", "debug-print" ] }
sea-query = { version = "^0.20.0", features = ["thread-safe"] }
futures-executor = { version = "^0.3" }
async-trait = { version = "^0.1" }
serde = { version = "^1" }
serde_json = { version = "^1" }
serde_repr = { version = "^0" }
num_cpus = { version = "^1" }
