[package]
name = "starfish-core"
version = "0.1.1"
authors = [
    "Chris Tsang <tyt2y7@gmail.com>",
    "Sanford Pun <punsanford@gmail.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
]
edition = "2021"
description = "StarfishQL - A graph database and query engine"
license = "AGPL-3.0"
documentation = "https://docs.rs/starfish-ql"
repository = "https://github.com/SeaQL/starfish-ql"
categories = ["database"]
keywords = ["graph-database", "graph-query-engine", "mysql", "postgres", "sqlite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "starfish_core"
path = "src/lib.rs"

[dependencies]
sea-orm = { git = "https://github.com/shpun817/sea-orm", default-features = false, features = [
    "macros",
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "debug-print",
]}
sea-schema = { git = "https://github.com/shpun817/sea-schema", default-features = false, features = [ "migration", "debug-print" ] }
sea-query = { version = "^0.24.0", features = ["thread-safe"] }
futures-executor = { version = "^0.3" }
async-trait = { version = "^0.1" }
serde = { version = "^1" }
serde_json = { version = "^1" }
serde_repr = { version = "^0" }
num_cpus = { version = "^1" }
